# py-mail

./: .editorconfig  .env-example  .gitignore  README.md  main.py  pyproject.toml
utils/: helper.py
